objects/Logo__c.object
<CustomObject>
    <fields>
        <fullName>Garn__c</fullName>
        <label>Garn</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_id__c</fullName>
        <label>Old id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isactive</label>
        <type>Checkbox</type>
    </fields>
    <label>Logo</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Logo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Logo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>